# ede

./: .envrc  .ghci  .gitignore  .travis.yml  AUTHORS  Makefile  Paths_ede.html  README.md  Text-EDE-Filters.html  Text-EDE-Text.html  Text-EDE.html  Tokens.hs  cabal.project  default.nix  doc-index.html  ed-e.cabal  ede.cabal  flake.nix  index-frames.html  index.html  mini_Paths_ede.html  mini_Text-EDE-Filters.html  mini_Text-EDE-Text.html  mini_Text-EDE.html  stack-lts-2.yaml  stack-lts-6.yaml  stack.yaml  test.ede  test.hs  test.out  tmpl.cabal
.github/workflows/: build.yml
app/: Main.hs  ede.hs
deb/DEBIAN/: control
ed-e/: Text-EDE.html  ed-e.haddock  mini_Text-EDE.html
lib/Text/: EDE.hs
lib/Text/EDE/: Filters.hs
lib/Text/EDE/Internal/: AST.hs  Compat.hs  Eval.hs  Filters.hs  Parser.hs  Quoting.hs  Syntax.hs  Types.hs
script/: generate-pages
scripts/: format
src/: EDE.hs  Main.hs  Test.hs  Tmpl.hs
src/EDE/Internal/: Interpreter.hs  Lexer.hs  Parser.hs  TypeCheck.hs  TypeChecker.hs  Types.hs
src/Text/: EDE.hs
src/Text/EDE/: Aeson.hs  Filters.hs  Internal.hs  Text.hs
src/Text/EDE/Internal/: AST.hs  AlgorithmW.hs  Checker.hs  CheckerIO.hs  Compiler.hs  Context.hs  Environment.hs  Eval.hs  Evaluator.hs  Filters.hs  HOAS.hs  Keywords.hs  Lexer.hs  Lexer.old.hs  Lexer.x  Options.hs  Parser.hs  Pretty.hs  Quoted.hs  Quoter.hs  Quotes.hs  Quoting.hs  Reduce.hs  Stdlib.hs  Style.hs  Syntax.hs  TypeChecker.hs  Types.hs  TypesIO.hs  TypingHaskellInHaskell.hs
src/Text/EDE/Internal/Checker/: Ambiguity.hs  Class.hs  Context.hs  Env.hs  Monad.hs  MonadIO.hs  Sub.hs  Subst.hs  Substitution.hs  Unification.hs  Unify.hs
src/Text/EDE/Internal/Lexer/: Names.hs  Tokens.hs
src/Text/EDE/Internal/Parser/: Base.hs
src/Tmpl/Internal/: Interpreter.hs  Lexer.hs  Parser.hs  TypeCheck.hs  Types.hs
test/: ExpectedFailure.hs  Main.hs  doctests.hs  golden.hs
test/Test/EDE/: Checker.hs  Lexer.hs  Parser.hs
test/resources/: binding.ede  binding.golden  boolean-condition.ede  boolean-conditions.ede  boolean-conditions.expected  boolean-conditions.golden  boolean-operands.ede  boolean-operands.golden  case.ede  case.expected  case.golden  comments.ede  comments.golden  cond-alternate.ede  cond-bin-bool.ede  cond-bin-bool.golden  cond-rel-integer.ede  cond-rel-integer.golden  cond-variable.ede  defined.ede  ext-base.ede  ext-base.golden  ext-child.ede  ext-child.golden  filters.ede  filters.expected  filters.golden  include.child  include.child1  include.child2  include.child3  include.ede  include.expected  include.golden  list-sorting.ede  list-sorting.golden  list-subdivision.ede  list-subdivision.golden  list-transformation.ede  literals.ede  (+50 more)
test/resources_failure/: include-loop.child1  include-loop.child2  include-loop.ede
