name:                  ed-e
version:               0.1.0
synopsis:              Textual Templating Language
homepage:              http://github.com/brendanhay/ed-e
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Text, Templating
build-type:            Simple
cabal-version:         >= 1.10

description:
    Pending

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/ed-e.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        EDE

    other-modules:
        EDE.Internal.Interpreter
      , EDE.Internal.Lexer
      , EDE.Internal.Parser
      , EDE.Internal.TypeChecker
      , EDE.Internal.Types

    ghc-options:       -Wall

    build-depends:
        aeson
      , attoparsec
      , base                 >= 4.6 && < 5
      , parsec
      , text
      , text-format
      , transformers
      , unordered-containers
      , vector