name:                  ede
version:               0.1.0
synopsis:              Textual Templating Language
homepage:              http://github.com/brendanhay/ede
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Text, Templating
build-type:            Simple
cabal-version:         >= 1.10

description:
    ED-E is a templating language written in Haskell with a specific set of features:
    .
    * Logicless within reason. A small set of consistent predicates
    and expressions for formatting and presentational logic are provided.
    .
    * Secure. No arbitrary code evaluation, with input data required to be fully specified
    at render time.
    .
    * Stateless. Parsing and rendering are separate steps so that loading, parsing,
    include resolution, and embedding of the compiled template can optionally be
    done ahead of time.
    .
    * Markup agnostic. ED-E is used to write out everything from configuration files for
    system services to HTML and formatted emails.
    .
    * Easy to debug. All parsing, type checking, and rendering steps report helpful
    error messages with line/column metadata. Variable shadowing, unprintable expressions,
    implicit type coercion, and unbound variable access are all considered errors.
    .
    * Control over purity. Users can choose to introduce impure resolution of
    @include@ expressions or to use their own pure mechanism.

extra-source-files:
    README.md

source-repository head
    type:     git
    location: git://github.com/brendanhay/ede.git

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        Text.EDE

    other-modules:
        Text.EDE.Internal.Compiler
      , Text.EDE.Internal.Filters
      , Text.EDE.Internal.Lexer
      , Text.EDE.Internal.Parser
      , Text.EDE.Internal.Types

    ghc-options:       -Wall

    build-depends:
        aeson
      , attoparsec
      , base >= 4.6 && < 5
      , directory
      , parsec
      , system-filepath
      , text
      , text-format
      , transformers
      , unordered-containers
      , vector

test-suite golden
    default-language:  Haskell2010
    type:              exitcode-stdio-1.0
    hs-source-dirs:    test
    main-is:           golden.hs

    ghc-options:       -Wall -threaded

    build-depends:
        aeson
      , base >= 4.6 && < 5
      , directory
      , ede
      , text
      , tasty
      , tasty-golden
