name:                  tmpl
version:               0.1.0
license:               OtherLicense
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay@gmail.com>
copyright:             Copyright (c) 2013 Brendan Hay
stability:             Experimental
category:              Text, Templating
build-type:            Simple
cabal-version:         >= 1.10

description: Pending

library
    default-language:  Haskell2010
    hs-source-dirs:    src

    exposed-modules:
        Tmpl

      , Tmpl.Internal.Interpreter
      , Tmpl.Internal.Lexer
      , Tmpl.Internal.Parser
      , Tmpl.Internal.Types

    ghc-options:       -Wall

    build-depends:
        aeson
      , attoparsec
      , base                 >= 4.6 && < 5
      , parsec
      , text
      , text-format
      , transformers
      , unordered-containers
      , vector